--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Highly customizable React component for inputing tags",
   "main": "react-tagsinput.js",
   "peerDependencies": {
-    "react": "^16.0.0 || ^15.0.0 || ^0.14.0"
+    "react": "^17.0.0 || ^16.0.0 || ^15.0.0 || ^0.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
